--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,9 @@
 ---
 layout: default
 ---
-
-<article class="page">
-
-  <h1>{{ page.title }}</h1>
-
-  <div class="entry">
-    {{ content }}
-  </div>
+<article>
+    <header>
+        {% include title.html %}
+    </header>
+    {{ page.content }}
 </article>
