--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,21 +1,11 @@
 <head>
-    <title>
-        {% if page.title %}
-        {{ page.title }}
-        {% else %}
-        {{ site.title }}
-        {% endif%}
-    </title>
-    {% if page.description %}
-    <meta name="description" content="{{ page.description}}"/>
-    {% endif %}
-    <meta name="viewport" content="device=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="{{ site.baseurl }}/main.css"/>
-    {% if page.css %}
-    <link rel="stylesheet" href="{{ site.baseurl }}{{ page.css }}"/>
-    {% endif %}
-    <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico"/>
-    {% if jekyll.environment == 'production' %}
-    {% include analytics.html %}
-    {% endif %}
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
+  {% seo title=false %}
+  {% if site.google_plus %}<link rel="author" href="https://plus.google.com/+{{site.google_plus}}"/>{% endif %}
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  {% if site.ads %}{% include pl-ad.html %}{% endif %}
 </head>
