--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-{% include head.html %}
-<body style="background: url('{{ site.baseurl }}/resources/images/main_front.jpg') no-repeat fixed;
-                            background-size: cover">
-<div id="wrapper">
-    <header>
+<html>
+  {% include head.html %}
+  <body>
     {% include header.html %}
-    </header>
-    <main id="start">
+    <div class="page-content">
+      <div class="wrapper">
         {{ content }}
-    </main>
-    {% include paginator.html %}
-    <footer>
-        {% include footer.html %}
-    </footer>
-</div>
-{% if site.disqus %}
-<script id="dsq-count-scr" src="//{{ site.disqus }}.disqus.com/count.js" async></script>
-{% endif %}
-</body>
+      </div>
+    </div>
+    {% include footer.html %}
+    {% include scripts.html %}
+  </body>
 </html>
