--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,12 @@
 ---
 layout: default
 ---
-<article>
-    <header>
-        {% include title.html %}
-    </header>
-    {{ page.content }}
+<article class="post">
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+  </header>
+  <div class="post-content">
+    {{ content }}
+  </div>
 </article>
+    {% include comment.html %}
